Project/M-2-v2/milestone_2Parser.py
# Generated from milestone_2.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class milestone_2Parser ( Parser ):

    grammarFileName = "milestone_2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<='", "'>='", "'int'", "'string'", "'bool'", 
                     "'untyped'", "'array'", "'..'", "'$'", "'assert'", 
                     "'yes'", "'items'", "''$''", "'true'", "'false'", "'no'", 
                     "'echo'", "'swap'", "'addr'", "'var'", "'and'", "'as'", 
                     "'asm'", "'bind'", "'block'", "'break'", "'case'", 
                     "'cast'", "'concept'", "'const'", "'continue'", "'converter'", 
                     "'macro'", "'method'", "'mixin'", "'mod'", "'nil'", 
                     "'not'", "'notin'", "'object'", "'of'", "'or'", "'out'", 
                     "'proc'", "'ptr'", "'raise'", "'ref'", "'return'", 
                     "'shl'", "'shr'", "'static'", "'template'", "'try'", 
                     "'tuple'", "'type'", "'using'", "'when'", "'while'", 
                     "'xor'", "'yield'", "'defer'", "'discard'", "'distinct'", 
                     "'div'", "'do'", "'elif'", "'else'", "'end'", "'enum'", 
                     "'except'", "'export'", "'finally'", "'for'", "'from'", 
                     "'func'", "'if'", "'import'", "'in'", "'include'", 
                     "'interface'", "'is'", "'isnot'", "'iterator'", "'let'", 
                     "'=='", "'='", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", 
                     "'&'", "'|'", "'~'", "'@'", "'%'", "'!'", "'^'", "'.'", 
                     "':'", "'{'", "'}'", "'('", "')'", "'['", "']'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SWAP", "ADDR", "VARIABLE", 
                      "AND", "AS", "ASM", "BIND", "BLOCK", "BREAK", "CASE", 
                      "CAST", "CONCEPT", "CONST", "CONTINUE", "CONVERTER", 
                      "MACRO", "METHOD", "MIXIN", "MOD", "NIL", "NOT", "NOTIN", 
                      "OBJECT", "OF", "OR", "OUT", "PROC", "PTR", "RAISE", 
                      "REF", "RETURN", "SHL", "SHR", "STATIC", "TEMPLATE", 
                      "TRY", "TUPLE", "TYPE", "USING", "WHEN", "WHILE", 
                      "XOR", "YIELD", "DEFER", "DISCARD", "DISTINCT", "DIV", 
                      "DO", "ELIF", "ELSE", "END", "ENUM", "EXCEPT", "EXPORT", 
                      "FINALLY", "FOR", "FROM", "FUNC", "IF", "IMPORT", 
                      "IN", "INCLUDE", "INTERFACE", "IS", "ISNOT", "ITERATOR", 
                      "LET", "EQUALS_OPERATOR", "EQUALIZE", "ADD_OPERATOR", 
                      "MINUS_OPERATOR", "MUL_OPERATOR", "DIV_OPERATOR", 
                      "LESS_THAN", "GREATER_THAN", "AND_OPERATOR", "OR_OPERATOR", 
                      "BITWISE_NOT_OPERATOR", "AT", "MODULUS", "NOT_OPERATOR", 
                      "XOR_OPERATOR", "DOT", "COLON", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", 
                      "COMMA", "SEMI_COLON", "INDENT", "COMMENT", "MULTILINE", 
                      "MULTILINE_DOC", "STR_LIT", "TRIPLESTR_LIT", "RSTR_LIT", 
                      "CHAR_LIT_LETTER", "CHAR_LIT", "GENERALIZED_STR_LIT", 
                      "GENERALIZED_TRIPLESTR_LIT", "IDENTIFIER", "FLOAT_LIT", 
                      "DIGIT", "INT_LIT", "INT8_LIT", "INT16_LIT", "INT32_LIT", 
                      "INT64_LIT", "UINT_LIT", "UINT8_LIT", "UINT16_LIT", 
                      "UINT32_LIT", "UINT64_LIT", "HEX_LIT", "DEC_LIT", 
                      "OCT_LIT", "BIN_LIT", "HEX", "HEXDIGIT", "OCTDIGIT", 
                      "BINDIGIT", "EXP", "FLOAT32_SUFFIX", "FLOAT32_LIT", 
                      "FLOAT64_SUFFIX", "FLOAT64_LIT", "ALL_LETTER", "LETTER", 
                      "ALL_ESCAPES", "SPACE" ]

    RULE_start = 0
    RULE_comments = 1
    RULE_comma = 2
    RULE_semicolon = 3
    RULE_colcom = 4
    RULE_post_operators = 5
    RULE_two_operator = 6
    RULE_cond_operator = 7
    RULE_assign_operator = 8
    RULE_operands = 9
    RULE_priotize_operand = 10
    RULE_operand = 11
    RULE_predifined_method = 12
    RULE_number = 13
    RULE_var_type = 14
    RULE_arr_item = 15
    RULE_arrayStmt = 16
    RULE_pointer_assign = 17
    RULE_assign_var_value = 18
    RULE_var_ident = 19
    RULE_section_variable = 20
    RULE_assertStmt = 21
    RULE_compare_two_operands = 22
    RULE_post_operand_func = 23
    RULE_method = 24
    RULE_prac_body = 25
    RULE_call_func = 26
    RULE_condition = 27
    RULE_action_for = 28
    RULE_action = 29
    RULE_breakStmt = 30
    RULE_return_body = 31
    RULE_returnStmt = 32
    RULE_ofStmt = 33
    RULE_comparStmt = 34
    RULE_comparStmt_proc = 35
    RULE_elifStmt = 36
    RULE_elseStmt = 37
    RULE_array_index = 38
    RULE_procHelperStmt = 39
    RULE_blockStmts = 40
    RULE_caseStmt = 41
    RULE_boolStmt = 42
    RULE_ifStmt = 43
    RULE_forStmt = 44
    RULE_whileStmt = 45
    RULE_whenStmt = 46
    RULE_procStmt = 47
    RULE_blockStmt = 48
    RULE_objectStmt = 49
    RULE_macroStmt = 50
    RULE_templateStmt = 51
    RULE_string_type = 52
    RULE_var_print = 53
    RULE_string = 54
    RULE_print_with_condition = 55
    RULE_print_statement = 56
    RULE_echoStmt = 57
    RULE_importStmt = 58
    RULE_fromStmt = 59
    RULE_vars_types = 60
    RULE_complexOrSimpleStmt = 61
    RULE_simpleStmt = 62
    RULE_stmt = 63

    ruleNames =  [ "start", "comments", "comma", "semicolon", "colcom", 
                   "post_operators", "two_operator", "cond_operator", "assign_operator", 
                   "operands", "priotize_operand", "operand", "predifined_method", 
                   "number", "var_type", "arr_item", "arrayStmt", "pointer_assign", 
                   "assign_var_value", "var_ident", "section_variable", 
                   "assertStmt", "compare_two_operands", "post_operand_func", 
                   "method", "prac_body", "call_func", "condition", "action_for", 
                   "action", "breakStmt", "return_body", "returnStmt", "ofStmt", 
                   "comparStmt", "comparStmt_proc", "elifStmt", "elseStmt", 
                   "array_index", "procHelperStmt", "blockStmts", "caseStmt", 
                   "boolStmt", "ifStmt", "forStmt", "whileStmt", "whenStmt", 
                   "procStmt", "blockStmt", "objectStmt", "macroStmt", "templateStmt", 
                   "string_type", "var_print", "string", "print_with_condition", 
                   "print_statement", "echoStmt", "importStmt", "fromStmt", 
                   "vars_types", "complexOrSimpleStmt", "simpleStmt", "stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    SWAP=18
    ADDR=19
    VARIABLE=20
    AND=21
    AS=22
    ASM=23
    BIND=24
    BLOCK=25
    BREAK=26
    CASE=27
    CAST=28
    CONCEPT=29
    CONST=30
    CONTINUE=31
    CONVERTER=32
    MACRO=33
    METHOD=34
    MIXIN=35
    MOD=36
    NIL=37
    NOT=38
    NOTIN=39
    OBJECT=40
    OF=41
    OR=42
    OUT=43
    PROC=44
    PTR=45
    RAISE=46
    REF=47
    RETURN=48
    SHL=49
    SHR=50
    STATIC=51
    TEMPLATE=52
    TRY=53
    TUPLE=54
    TYPE=55
    USING=56
    WHEN=57
    WHILE=58
    XOR=59
    YIELD=60
    DEFER=61
    DISCARD=62
    DISTINCT=63
    DIV=64
    DO=65
    ELIF=66
    ELSE=67
    END=68
    ENUM=69
    EXCEPT=70
    EXPORT=71
    FINALLY=72
    FOR=73
    FROM=74
    FUNC=75
    IF=76
    IMPORT=77
    IN=78
    INCLUDE=79
    INTERFACE=80
    IS=81
    ISNOT=82
    ITERATOR=83
    LET=84
    EQUALS_OPERATOR=85
    EQUALIZE=86
    ADD_OPERATOR=87
    MINUS_OPERATOR=88
    MUL_OPERATOR=89
    DIV_OPERATOR=90
    LESS_THAN=91
    GREATER_THAN=92
    AND_OPERATOR=93
    OR_OPERATOR=94
    BITWISE_NOT_OPERATOR=95
    AT=96
    MODULUS=97
    NOT_OPERATOR=98
    XOR_OPERATOR=99
    DOT=100
    COLON=101
    OPEN_BRACE=102
    CLOSE_BRACE=103
    OPEN_PAREN=104
    CLOSE_PAREN=105
    OPEN_BRACK=106
    CLOSE_BRACK=107
    COMMA=108
    SEMI_COLON=109
    INDENT=110
    COMMENT=111
    MULTILINE=112
    MULTILINE_DOC=113
    STR_LIT=114
    TRIPLESTR_LIT=115
    RSTR_LIT=116
    CHAR_LIT_LETTER=117
    CHAR_LIT=118
    GENERALIZED_STR_LIT=119
    GENERALIZED_TRIPLESTR_LIT=120
    IDENTIFIER=121
    FLOAT_LIT=122
    DIGIT=123
    INT_LIT=124
    INT8_LIT=125
    INT16_LIT=126
    INT32_LIT=127
    INT64_LIT=128
    UINT_LIT=129
    UINT8_LIT=130
    UINT16_LIT=131
    UINT32_LIT=132
    UINT64_LIT=133
    HEX_LIT=134
    DEC_LIT=135
    OCT_LIT=136
    BIN_LIT=137
    HEX=138
    HEXDIGIT=139
    OCTDIGIT=140
    BINDIGIT=141
    EXP=142
    FLOAT32_SUFFIX=143
    FLOAT32_LIT=144
    FLOAT64_SUFFIX=145
    FLOAT64_LIT=146
    ALL_LETTER=147
    LETTER=148
    ALL_ESCAPES=149
    SPACE=150

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(milestone_2Parser.StmtContext)
            else:
                return self.getTypedRuleContext(milestone_2Parser.StmtContext,i)


        def getRuleIndex(self):
            return milestone_2Parser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = milestone_2Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.stmt()
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << milestone_2Parser.T__9) | (1 << milestone_2Parser.T__10) | (1 << milestone_2Parser.T__16) | (1 << milestone_2Parser.VARIABLE) | (1 << milestone_2Parser.BLOCK) | (1 << milestone_2Parser.CASE) | (1 << milestone_2Parser.CONST) | (1 << milestone_2Parser.MACRO) | (1 << milestone_2Parser.PROC) | (1 << milestone_2Parser.REF) | (1 << milestone_2Parser.TEMPLATE) | (1 << milestone_2Parser.TYPE) | (1 << milestone_2Parser.WHEN) | (1 << milestone_2Parser.WHILE))) != 0) or ((((_la - 73)) & ~0x3f) == 0 and ((1 << (_la - 73)) & ((1 << (milestone_2Parser.FOR - 73)) | (1 << (milestone_2Parser.FROM - 73)) | (1 << (milestone_2Parser.IF - 73)) | (1 << (milestone_2Parser.IMPORT - 73)) | (1 << (milestone_2Parser.LET - 73)) | (1 << (milestone_2Parser.AT - 73)) | (1 << (milestone_2Parser.OPEN_BRACK - 73)) | (1 << (milestone_2Parser.COMMA - 73)) | (1 << (milestone_2Parser.SEMI_COLON - 73)) | (1 << (milestone_2Parser.INDENT - 73)) | (1 << (milestone_2Parser.COMMENT - 73)) | (1 << (milestone_2Parser.MULTILINE - 73)) | (1 << (milestone_2Parser.MULTILINE_DOC - 73)) | (1 << (milestone_2Parser.IDENTIFIER - 73)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(milestone_2Parser.COMMENT, 0)

        def MULTILINE_DOC(self):
            return self.getToken(milestone_2Parser.MULTILINE_DOC, 0)

        def MULTILINE(self):
            return self.getToken(milestone_2Parser.MULTILINE, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)




    def comments(self):

        localctx = milestone_2Parser.CommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not(((((_la - 111)) & ~0x3f) == 0 and ((1 << (_la - 111)) & ((1 << (milestone_2Parser.COMMENT - 111)) | (1 << (milestone_2Parser.MULTILINE - 111)) | (1 << (milestone_2Parser.MULTILINE_DOC - 111)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(milestone_2Parser.COMMA, 0)

        def comments(self):
            return self.getTypedRuleContext(milestone_2Parser.CommentsContext,0)


        def getRuleIndex(self):
            return milestone_2Parser.RULE_comma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComma" ):
                listener.enterComma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComma" ):
                listener.exitComma(self)




    def comma(self):

        localctx = milestone_2Parser.CommaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(milestone_2Parser.COMMA)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 111)) & ~0x3f) == 0 and ((1 << (_la - 111)) & ((1 << (milestone_2Parser.COMMENT - 111)) | (1 << (milestone_2Parser.MULTILINE - 111)) | (1 << (milestone_2Parser.MULTILINE_DOC - 111)))) != 0):
                self.state = 136
                self.comments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SemicolonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI_COLON(self):
            return self.getToken(milestone_2Parser.SEMI_COLON, 0)

        def comments(self):
            return self.getTypedRuleContext(milestone_2Parser.CommentsContext,0)


        def getRuleIndex(self):
            return milestone_2Parser.RULE_semicolon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSemicolon" ):
                listener.enterSemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSemicolon" ):
                listener.exitSemicolon(self)




    def semicolon(self):

        localctx = milestone_2Parser.SemicolonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_semicolon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(milestone_2Parser.SEMI_COLON)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 140
                self.comments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColcomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(milestone_2Parser.COLON, 0)

        def comments(self):
            return self.getTypedRuleContext(milestone_2Parser.CommentsContext,0)


        def getRuleIndex(self):
            return milestone_2Parser.RULE_colcom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColcom" ):
                listener.enterColcom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColcom" ):
                listener.exitColcom(self)




    def colcom(self):
